@@ -103,6 +103,7 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
   missing_contrib_associate_list   "No contributors selected for addition."
   missing_contrib_unassociate_list "No contributors selected for removal."
   message_contribs_reordered       "Contributor order updated."
+  selected_media                   "Linked to media '$id'."
 </Module>
 
 <Module "Krang::CGI::Group">
